--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,8 +1,25 @@
 include: package:very_good_analysis/analysis_options.yaml
 
+analyzer:
+  exclude:
+    - /**/*.g.dart
+
 # Reglas Lint y documentación, véase en https://dart.dev/tools/linter-rules.
 linter:
   rules:
-    public_member_api_docs: false
+    avoid_redundant_argument_values: true       # Evitar valores argumentales redundantes.
 
-    sort_pub_dependencies: false
+    depend_on_referenced_packages: true         # Depender de los paquetes referenciados.
+    directives_ordering: true                   # Respetar las convenciones de ordenamiento de las directivas de la Guía de Flutter.
+
+    library_private_types_in_public_api: false  # Evitar utilizar tipos privados en API públicas.
+
+    prefer_const_declarations: true             # Preferir const en lugar de final para las declaraciones.
+    prefer_const_constructors: true             # Preferir const con constructores constantes.
+    prefer_single_quotes: true                  # Utilizar comillas simples en lugar de comillas dobles.
+    public_member_api_docs: false               # No documentar a todos los miembros públicos.
+
+    sort_pub_dependencies: false                # No ordenar las dependencias del pub alfabéticamente.
+    sort_unnamed_constructors_first: true       # Ordenar constructores sin nombre primero.
+
+    use_build_context_synchronously: false      # No utilizar BuildContexts a través de gaps async.
