--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,3 +26,4 @@ linter:
     sort_unnamed_constructors_first: true       # Ordenar constructores sin nombre primero.
 
     use_build_context_synchronously: false      # No utilizar BuildContexts a través de gaps async.
+    use_super_parameters: false                 # Desactivar el uso de parametros super en constructores.
