--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   # Biblioteca de gestión de estados predictivo
   bloc: ^8.1.3
+  # Verificar el estatus de la conexion a Internet
+  connectivity_plus: ^5.0.2
   # Íconos estilo iOS
   cupertino_icons: ^1.0.2
   # Programación funcional en Dart
@@ -25,6 +27,8 @@ dependencies:
   equatable: ^2.0.5
   # Diseñar temas basado en Material Design
   flex_color_scheme: ^7.3.1
+  # Animaciones de Flutter
+  flutter_animate: ^4.5.0
   # Widgets Flutter basados en el patrón de diseño BLoC
   flutter_bloc: ^8.1.4
   # Splash screen nativo en Flutter
@@ -70,9 +74,7 @@ dependencies:
   # Indicadores de página animados
   smooth_page_indicator: ^1.1.0
   # Plugin de Flutter para lanzar URL
-  url_launcher: ^6.2.4
-  connectivity_plus: ^5.0.2
-  flutter_animate: ^4.5.0
+  url_launcher: ^6.2.4  
 
 dev_dependencies:
   flutter_test:
