--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,9 @@ dependencies:
   url_launcher: ^6.2.4
   path: ^1.8.3
   camera: ^0.10.5+9
+  syncfusion_flutter_signaturepad: ^24.2.9
+  dotted_border: ^2.1.0
+  flutter_displaymode: ^0.6.0
 
 dev_dependencies:
   flutter_test:
@@ -86,7 +89,7 @@ dev_dependencies:
   # Generador de código y compilación modular
   build_runner: ^2.4.8
   # Linters de Flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   # Genera código convertido a JSON
   json_serializable: ^6.6.2
   # Generador de retrofit
