--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,89 +11,133 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # Biblioteca de gestión de estados predictivo
+
+  # Estado de gestión de aplicaciones Flutter basado en el patrón BLoC
   bloc: ^8.1.3
-  # Verificar el estatus de la conexion a Internet
+
+  # Plugin de Flutter para acceder a la cámara
+  camera: ^0.10.5+9
+
+  # Verifica el estado de la conexión a Internet
   connectivity_plus: ^5.0.2
-  # Íconos estilo iOS
+
+  # Íconos Cupertino para iOS
   cupertino_icons: ^1.0.2
+
   # Programación funcional en Dart
   dartz: ^0.10.1
-  # Peticiones HTTP, Interceptores, Transformadores, etc
+
+  # HTTP Requests, Interceptors, Transformers, etc.
   dio: ^5.4.1
-  # Buscador de Flutter con dropdown
+
+  # Widget para bordear con puntos un contenedor en Flutter
+  dotted_border: ^2.1.0
+
+  # Widget de búsqueda de Flutter con dropdown  
   dropdown_search: ^5.0.6
-  # Simplificar comparación de objetos de Dart
+
+  # Simplifica la comparación de objetos en Dart
   equatable: ^2.0.5
-  # Diseñar temas basado en Material Design
+
+  # Diseña temas basados en Material Design
   flex_color_scheme: ^7.3.1
+
   # Animaciones de Flutter
   flutter_animate: ^4.5.0
+
   # Widgets Flutter basados en el patrón de diseño BLoC
   flutter_bloc: ^8.1.4
+
+  # Manejo de modos de visualización en Flutter
+  flutter_displaymode: ^0.6.0
+
+  # Plugin para cambiar los íconos de la aplicación Flutter
+  flutter_launcher_icons: ^0.13.1
+
   # Splash screen nativo en Flutter
   flutter_native_splash: ^2.3.10
-  # API para almacenar datos en almacenamiento seguro
+
+  # API para almacenamiento de datos en almacenamiento seguro
   flutter_secure_storage: ^9.0.0
-  # Mostrar imágenes SVG
+
+  # Muestra imágenes SVG
   flutter_svg: ^2.0.9
-  # Mostrar Toasts en Flutter
-  fluttertoast: ^8.2.4
-  # Pack de íconos de FontAwesome
-  font_awesome_flutter: ^10.7.0
-  # Agregar gaps a widgets de Flutter
+
+  # Agrega espacios entre widgets en Flutter
   gap: ^3.0.1
-  # Localizador directo de servicios
+
+  # Localizador de servicios directos
   get_it: ^7.6.7
+
   # Mixins para `watch` los servicios registrados con GetIt
   get_it_mixin: ^4.2.2
+
   # Router declarativo para Flutter
   go_router: ^13.2.0
+
   # Internacionalización, formateo de fechas, números, etc
   intl: ^0.19.0
-  # Seleccionar imágenes de galería y tomar nuevas fotografías
+
+  # Selecciona imágenes de galería y permite tomar nuevas fotografías
   image_picker: ^1.0.7
-  # Define anotaciones usados por `json_serializable`
+
+  # Define anotaciones utilizadas por `json_serializable`
   json_annotation: ^4.8.1
+
+  # Imprime hermosos registros en el log.
+  logger: ^2.1.0
+
   # Renderiza animaciones de After Effects en Flutter
   lottie: ^3.0.0
-  # Buscador basado en el diseño Material de Google
-  material_floating_search_bar_2: ^0.5.0
-  # Abrir archivos con resultados de cadena en Flutter
+
+  # Abre archivos con resultados de cadenas en Flutter
   open_file: ^3.3.2
-  # Obtener ubicaciones de uso común en los sitemas de archivos
+
+  # Obtiene información sobre rutas de archivos
+  path: ^1.8.3
+
+  # Obtiene ubicaciones de uso común en los sitemas de archivos
   path_provider: ^2.1.2
+
   # Wrapper de InheritedWidget para reutilizaciones globales
   provider: ^6.1.1
+
   # Generador de código para cliente Dio
   retrofit: ^4.1.0
-  # Leer/Escribir key-value pairs en el sistema del usuario
+
+  # Leer/Escribir pares clave-valor en el sistema del usuario
   shared_preferences: ^2.2.2
-  # Efecto de brillo en Flutter
+
+  # Efecto de esqueleto de carga en Flutter
   shimmer: ^3.0.0
+
   # Indicadores de página animados
   smooth_page_indicator: ^1.1.0
-  # Plugin de Flutter para lanzar URL
-  url_launcher: ^6.2.4
-  path: ^1.8.3
-  camera: ^0.10.5+9
+
+  # Widget para capturar firmas en Flutter
   syncfusion_flutter_signaturepad: ^24.2.9
-  dotted_border: ^2.1.0
-  flutter_displaymode: ^0.6.0
+
+  # Plugin de Flutter para lanzar URL
+  url_launcher: ^6.2.4  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   # Testing de BLoCs
   bloc_test: ^9.1.6
+
   # Generador de código y compilación modular
   build_runner: ^2.4.8
+
   # Linters de Flutter
   flutter_lints: ^3.0.1
+
   # Genera código convertido a JSON
   json_serializable: ^6.6.2
+
   # Generador de retrofit
   retrofit_generator: ^8.1.0
+
   # Reglas de lint para Dart y Flutter
   very_good_analysis: ^5.1.0
 
@@ -108,9 +152,19 @@ flutter_native_splash:
 
   web: false
 
+# ejecutar: flutter pub run flutter_launcher_icons
+flutter_launcher_icons:
+  image_path: "assets/marketing/app-icon-1024.png"
+  remove_alpha_ios: true
+  android: true
+  ios: true
+  min_sdk_android: 21
 
 # La siguiente sección es específica para los paquetes Flutter.
 flutter:
+  # La siguiente línea asegura que la fuente Material Icons esté
+  # incluida con la aplicación, para que podamos utilizar los iconos en
+  # la clase Material Icons.
   uses-material-design: true
 
   generate: true
