Agregando el dialogo de About App para visualizacion de licencias

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -139,6 +139,8 @@ dependencies:
   url_launcher: ^6.2.4
   uuid: ^4.3.3
   dart_jsonwebtoken: ^2.13.0
+  package_info_plus: ^5.0.1
+  webview_flutter: ^4.5.0
 
 dev_dependencies:
   flutter_test:
