--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -149,6 +149,7 @@ dependencies:
 
   # Widget WebView en Android e iOS
   webview_flutter: ^4.5.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
