--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   # API para almacenamiento de datos en almacenamiento seguro
   flutter_secure_storage: ^9.0.0
 
+  # Colección de layouts grids
+  flutter_staggered_grid_view: ^0.7.0
+
   # Muestra imágenes SVG
   flutter_svg: ^2.0.9
 
