--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -151,6 +151,7 @@ dependencies:
   webview_flutter: ^4.5.0
   multi_select_flutter: ^4.1.3
   rxdart: ^0.27.7
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
