--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -152,6 +152,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   rxdart: ^0.27.7
   image: ^4.2.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
