--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -153,6 +153,7 @@ dependencies:
   rxdart: ^0.27.7
   image: ^4.2.0
   collection: ^1.18.0
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
