--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -154,6 +154,7 @@ dependencies:
   image: ^4.2.0
   collection: ^1.18.0
   infinite_scroll_pagination: ^4.0.0
+  photo_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
